# SynthIDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  node-request.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/rendering_backend/: AppWindow.h
include/ui/core/: RenderingLoop.h
include/ui/widgets/: NodeEditorWidget.h  NodeWidget.h
include/ui/widgets/nodes/: MidiNode.h  UINodeAttribute.h  UINodeBase.h  WaveformSynth.h
src/rendering_backend/: AppWindow.cpp  CMakeLists.txt
src/ui/: CMakeLists.txt
src/ui/core/: RenderingLoop.cpp
src/ui/widgets/: NodeEditorWidget.cpp  NodeWidget.cpp
src/ui/widgets/nodes/: MidiNode.cpp  UINodeAttribute.cpp  WaveformSynth.cpp
